--- a/assets/css/_sass/variables.scss
+++ b/assets/css/_sass/variables.scss
@@ -22,7 +22,8 @@ $projectbox: $uoa-lightblue;
 $text-color: #333;
 
 // Color scheme for dark modes
-$body-bg-dark: #061725;
+// $body-bg-dark: #061725;
+$body-bg-dark: $uoa-darkblue;
 $projectbox-dark: lighten($body-bg-dark, 10%);
 //$text-color-dark: #777;
 $text-color-dark: $uoa-silver;
