Customise the page a bit further to my uses, I hope.  In theory, I have modified the colour scheme and started to change the pages which appear along the top.

--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -17,6 +17,7 @@ body {
   @media (prefers-color-scheme: dark) {
     background-color: $body-bg-dark;
     color: $text-color-dark;
+    $brand-color: $brand-color-dark
   }
 }
 
