--- a/layouts/shortcodes/publications.html
+++ b/layouts/shortcodes/publications.html
@@ -1,27 +1,30 @@
-<div>
-    <ul>
-        {{ range $pub := (sort (index $.Site.Data "publications") "year" "desc") }}
-        <li>
-            <b>{{ index $pub "title" }}</b>
-            <br/>
-            {{ index $pub "authors" }}
-            <br/>
+<ul>
+    {{ range $pub := (sort (index $.Site.Data "publications") "year" "desc") }}
+    <li>
+        <b>{{ index $pub "title" }}</b>
+        <p>
+            {{ index $pub "authors" | markdownify }}
+            <!--        {{ partial "publications_authors.html" (index $pub "authors") }}-->
+        </p>
+        <p>
             <em>{{index $pub "venue" }}. {{index $pub "year" }}.</em>
-            <br/>
+        </p>
+        <p>
             {{ with $doi := index $pub "doi" }}
             DOI: <a href="https://doi.org/{{ $doi }}">{{ $doi }}</a>
-            <br/>
             {{ end }}
-            <details>
-                <summary>Abstract</summary>
-                <blockquote>
-                    {{ index $pub "abstract" }}
-                </blockquote>
-            </details>
+        </p>
+        <details>
+            <summary>Abstract</summary>
+            <blockquote>
+                {{ index $pub "abstract" }}
+            </blockquote>
+        </details>
+        <p>
             {{ with $key := index $pub "key" }}
             <a href="{{ $.Site.BaseURL }}/publications/{{ $key }}.bib">bibtex</a>
             {{ end }}
-        </li>
-        {{ end }}
-    </ul>
-</div>
+        </p>
+    </li>
+    {{ end }}
+</ul>
